[project]
name = "llm-guardian"
version = "0.1.0"
description = "Security reverse proxy for LLMs"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "google-genai",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "scikit-learn",
    "python-dotenv",
]

[dependency-groups]
dev = ["pytest", "pytest-playwright", "httpx", "ruff", "pyright", "pip-audit"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]